# sonos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conda.yml  env.sh
include/: command.h  data.h  key.h  key_error.h  keypair.h  nostr.h  pubkey.h
samples/: bot.sh  script.sh
src/: command.h  data.h  key.cpp  key.h  key_error.h  keypair.cpp  keypair.h  main.cpp  net_utils.h  nostr.cpp  nostr.h  pubkey.cpp  pubkey.h  utils.cpp  utils.h
src/commands/: convert_cmd.cpp  convert_cmd.h  event_cmd.cpp  event_cmd.h  keypair_cmd.cpp  keypair_cmd.h  relays_cmd.cpp  relays_cmd.h  req_cmd.cpp  req_cmd.h  user_cmd.cpp  user_cmd.h
test/: key_test.cpp  keypair_test.cpp  nostr_test.cpp
